--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         <script src="js/jquery/script.js"></script>
     </head>
     <body class="metro" style="background-color: black;">
-        <div class="container" style="width: 1290px !important;">
+        <div class="container10x6">
             <div class="main-content clearfix">
                 <header class="bg-darkBlue"></header>
                 <div class="tile-area no-padding bg-black clearfix">
@@ -29,8 +29,8 @@ and open the template in the editor.
                         </div>
                         <a href="cv.html">
                             <div class="tile bg-white">
-                                <div class="tile-content icon">
-                                    <i class="icon-clipboard-2 fg-black"></i>
+                                <div class="tile-content">
+                                    <img src="icons/Tabuser01 cv-normal.png">
                                 </div>
                             </div>
                         </a>
