--- a/web/www_talentdeveloper.html
+++ b/web/www_talentdeveloper.html
@@ -20,80 +20,40 @@ and open the template in the editor.
         <div class="container10x6" style="background-color: black;">
             <div class="main-content clearfix">
                 <div class="tile-area no-padding bg-black clearfix">
-                    <div class="tile-group ten no-padding clearfix" style="margin: 5px; margin-right: 0; float: left;">
+                    <div class="tile-group two no-padding clearfix" style="margin: 5px; margin-right: 0; margin-bottom: 0; float: left;">
                         <!-- tile for opening balloon pop up menu -->
-                        <div class="tile menutile bg-blue" id="contextmenu">
+                        <div class="tile menutile bg-blue">
                             <div class="tile-content icon">
                                 <i class="icon-grid"></i>
                             </div>
                         </div>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <div class="tile no-outline border selected" style="display: table-cell; width: 120px; height: 120px; background-color: #11337b; background-image: url('information-icon.png'); cursor: default; text-align: center; vertical-align: bottom;">
+                        <div class="tile bg-orange" style="">
                             
-                                <img src="icons/information-icon.png" style="display: ">
+                        </div>
+                        <a href="trm_talentdeveloper.html">
+                            <div class="tile bg-orange" style="">
+
+                            </div>
+                        </a>
+                        <div class="tile no-outline border selected" id="contextmenu" style="display: table-cell; width: 120px; height: 120px; background-color: #11337b; background-image: url('information-icon.png'); cursor: default; text-align: center; vertical-align: bottom;">
+                            
+                            <img src="icons/information-icon.png" style="display: ">
                             <span class="tile-status title unselectable" style="color: #11337b; background-color: white;">
                                 Informatie
                             </span>
                         </div>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="trm_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
-                        <a href="www_talentdeveloper.html">
-                            <div class="tile bg-white" style="display: table-cell; text-align: center;">
-                                <span class="tile-status title" style="color: #11337b; background-color: white;">
-                                    swek
-                                </span>
-                            </div>
-                        </a>
+                    </div>
+                    <div class="tile-group no-padding clearfix" style="margin: 5px; margin-left: 0; margin-right: 0;">
+                        <div class="tile triple double-vertical">
+                            <img src="icons/TD Logo 380x250.png">
+                        </div>
+                        <div class="tile penta double-vertical no-margin-right">
+                            <img src="icons/Peter logo links 640x250.png">
+                        </div>
                     </div>
                 </div>
                 <div class="tile-area no-padding clearfix" style="margin: 0; margin-top: -5px;">
-                    <div class="tab-content" style="height: 740px; width: 1290px; margin-left: 5px; background-color: #11337b; border: 1px solid #35569a;">
+                    <div class="tab-content" style="height: 610px; width: 1290px; margin-left: 5px; background-color: #11337b; border: 1px solid #35569a;">
                         <div style="text-decoration-color: white; padding: 1em;">
                             <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus nec tellus ultrices euismod. Sed vehicula risus libero, id cursus lorem efficitur in. Cras ac mattis augue. Vestibulum ut arcu in tortor tincidunt aliquet eu nec leo. Donec ullamcorper elit sed neque sollicitudin fringilla. Vivamus rhoncus varius urna et commodo. Integer feugiat nunc massa, eu suscipit tellus volutpat id. Aliquam sit amet turpis vel felis aliquet ornare eget ac eros. Praesent id ligula luctus, cursus dolor ut, interdum lectus. Sed feugiat mauris ex, ut hendrerit ante suscipit nec. Nulla facilisi.</p>
 
